# ray-tac-toe

./: meson.build
include/: grid.h  restart.h
src/: grid.c  main.c  restart.c
